Avoid flickering

--- a/assets/stylesheets/redmine_wysiwyg_editor.css
+++ b/assets/stylesheets/redmine_wysiwyg_editor.css
@@ -1,10 +1,3 @@
-.jstTabs,
-.jstElements,
-.jstEditor {
-  /* To avoid flickering of the original editor. */
-  visibility: hidden;
-}
-
 .wysiwyg-editor {
   padding-right: 2px;
 }
